ADD_EXECUTABLE( test_LapackWrappers test_LapackWrappers.cpp )
TARGET_COMPILE_DEFINITIONS( test_LapackWrappers PUBLIC ${COVERAGE_FLAGS} )
TARGET_LINK_LIBRARIES( test_LapackWrappers LapackWrappers )
TARGET_LINK_LIBRARIES( test_LapackWrappers ${COVERAGE_LIBS} ${LDLIBS} ${LDLIBS_EXTRA} ${SYSTEM_LIBS} ${SYSTEM_LDFLAGS} )
TARGET_LINK_LIBRARIES( test_LapackWrappers ${CMAKE_HIP_IMPLICIT_LINK_LIBRARIES} ${CMAKE_CUDA_IMPLICIT_LINK_LIBRARIES} ${CMAKE_C_IMPLICIT_LINK_LIBRARIES}
                      ${CMAKE_CXX_IMPLICIT_LINK_LIBRARIES} ${CMAKE_Fortran_IMPLICIT_LINK_LIBRARIES} )
SET_TARGET_PROPERTIES( test_LapackWrappers PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS} ${LDFLAGS} ${LDFLAGS_EXTRA}" )
INSTALL( TARGETS test_LapackWrappers DESTINATION ${${PROJ}_INSTALL_DIR}/bin )
ADD_TEST( NAME test_LapackWrappers COMMAND $<TARGET_FILE:test_LapackWrappers> )
